--- a/.github/workflows/node_docker.yml
+++ b/.github/workflows/node_docker.yml
@@ -39,12 +39,12 @@ jobs:
       - name: Run Tests
         run: npm run test
       
-      - name: Deploy Docker
-        uses: mr-smithers-excellent/docker-build-push@v6
-        with:
-          image: bensonchen456/my-app
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Deploy Docker
+      #   uses: mr-smithers-excellent/docker-build-push@v6
+      #   with:
+      #     image: bensonchen456/my-app
+      #     registry: docker.io
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
         
