--- a/.github/workflows/esline.yaml
+++ b/.github/workflows/esline.yaml
@@ -5,13 +5,13 @@ on:
     branches:
       - '**'
   
-  jobs:
-    lint:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-node@v4
-          with:
-            node-version: 20
-        - uses: npm ci
-        - uses: npm run lint
+jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm ci
+      - run: npm run lint
