--- a/.github/workflows/esline.yaml
+++ b/.github/workflows/esline.yaml
@@ -15,3 +15,6 @@ jobs:
           node-version: 20
       - run: npm ci
       - run: npm run lint
+
+      - name: Eslint is done
+        run: echo "Eslint is done running chat!"
